# rembg

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
rembg-app/: README.md  package-lock.json  package.json
rembg-app/src-tauri/: Cargo.toml  tauri.conf.json
rembg-app/src-tauri/capabilities/: default.json
rembg-app/src-tauri/src/: lib.rs  main.rs
rembg-app/src/routes/: +page.svelte
rembg-rs/: Cargo.toml  README.md
rembg-rs/src/: cli.rs  compose.rs  core.rs  download.rs  lib.rs  main.rs  model.rs  pypi.rs  runtime.rs  u2net.rs
