[package]
name = "rembg-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/i-rocky/rembg"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
directories = "6.0.0"
hex = "0.4.3"
image = { version = "0.25.9", features = ["png", "jpeg", "webp"] }
md5 = "0.8.0"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
ureq = { version = "3.2.0", features = ["rustls"] }
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
